# fonts-installer

./: README.md  pyproject.toml
data/: fonts-installer.desktop  fonts-installer.metainfo.xml
src/fonts_installer/: EULA  fonts.py  gui.py  installer.py  main.py  utils.py
